skill remake code

--- a/index.html
+++ b/index.html
@@ -215,122 +215,123 @@
                         </div>
                     </div>
                     <!-- Atribute Code End -->
-                </div>
-        </div>
 
-        <!-- Skill code Start -->
-        <div>
-            <h1 style="text-align: center;">SKILL</h1>
-        </div>
+                    <!-- Skill Code Start -->
+                    <div class="skill-container">
+                        <div>
+                            <h1 style="text-align: center;">SKILL</h1>
+                        </div>
 
-        <!-- Passive -->
-        <div>
-            <div class="layout-skill">
-                <div>
-                    <h1>Tai Chi</h1>
+                        <!-- Passive -->
+                        <div>
+                            <div class="layout-skill">
+                                <div>
+                                    <h1>Tai Chi</h1>
+                                </div>
+                                <div class="layout-cd-mp">Passive</div>
+                            </div>
+                            <div class="layout-skill two">
+                                <div>
+                                    <img class="img-skill" src="assets/images/hero/tank/akai/skill/Tai_Chi.png"
+                                        alt="" />
+                                </div>
+                                <div class="description-skill ">
+                                    <span>
+                                        Everytime a skill is used, Akai gains a shield that absorbs
+                                        up to 6% of his maximum HP. Lasts 2 seconds, this effect has
+                                        a 2.5 second cooldown.
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Skill 1 -->
+                        <div>
+                            <div class="layout-skill">
+                                <div>
+                                    <h1>Thousand Pounder</h1>
+                                </div>
+                                <div class="layout-cd-mp">
+                                    <div>Cooldown: <span>10</span></div>
+                                    <div>Mana Cost: <span>70</span></div>
+                                </div>
+                            </div>
+                            <div class="layout-skill two">
+                                <div class="layout-img-skill"> <img class="img-skill"
+                                        src="assets/images/hero/tank/akai/skill/Thousand_Pounder.png" alt="" />
+                                </div>
+                                <div class="description-skill">
+                                    <span>
+                                        Akai jumps towards a designated location. Upon landing, Akai
+                                        deals 300(+65%Total Physical Attack) points of Physical
+                                        Damage to enemy units, while expercieincing a slow effect
+                                        for 2 seconds. Akai deals bonus damage to marked enemies and
+                                        causes a stun effect for 1 seconds.
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Skill 2 -->
+                        <div>
+                            <div class="layout-skill">
+                                <div>
+                                    <h1>Blender</h1>
+                                </div>
+                                <div class="layout-cd-mp">
+                                    <div>Cooldown: <span>6.5</span></div>
+                                    <div>Mana Cost: <span>65</span></div>
+                                </div>
+                            </div>
+                            <div class="layout-skill two">
+                                <div class="layout-img-skill">
+                                    <img class="img-skill" src="assets/images/hero/tank/akai/skill/Blender.png"
+                                        alt="" />
+                                </div>
+                                <div class="description-skill">
+                                    <span>
+                                        Akai fires a frog shaped shockwave in the designated direction that explodes
+                                        on
+                                        contact with enemies or once it reaches maximum range, dealing
+                                        350(+135%Extra
+                                        Physical Attack) points of Physical Damage and marking them for 4 seconds.
+                                        His
+                                        basic attacks on marked targets deal extra 8% of Akai's maximum health as
+                                        physical damage.
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Ultimate -->
+                        <div class="box-ulti">
+                            <div class="layout-skill">
+                                <div>
+                                    <h1 style="text-align: center;">Hurricane Dance</h1>
+                                </div>
+                                <div class="layout-cd-mp">
+                                    <div style="text-align: center;">Cooldown: <span>35.5</span></div>
+                                    <div>Mana Cost: <span>120</span></div>
+                                </div>
+                            </div>
+                            <div class="layout-skill">
+                                <div class="layout-img-skill">
+                                    <img class="img-skill" src="assets/images/hero/tank/akai/skill/Hurricane_Dance.png"
+                                        alt="" />
+                                </div>
+                                <div class="description-skill">
+                                    <span>
+                                        Akai removes all CC effects from him and spins like a tornado for 3.5
+                                        seconds.
+                                        Each collision knocks back the target and deals 180(+165%Extra Physical
+                                        Attack)
+                                        points of Physical Damage (damage decays against the same target). During
+                                        the
+                                        time, Akai becomes immune to all CC effects and gains movement speed by 30%.
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Skill code End -->
                 </div>
-                <div class="layout-cd-mp">Passive</div>
-            </div>
-            <div class="layout-skill two">
-                <div>
-                    <img class="img-skill" src="assets/images/hero/tank/akai/skill/Tai_Chi.png" alt="" />
-                </div>
-                <div class="description-skill ">
-                    <span>
-                        Everytime a skill is used, Akai gains a shield that absorbs
-                        up to 6% of his maximum HP. Lasts 2 seconds, this effect has
-                        a 2.5 second cooldown.
-                    </span>
-                </div>
-            </div>
-        </div>
-        <!-- Skill 1 -->
-        <div>
-            <div class="layout-skill">
-                <div>
-                    <h1>Thousand Pounder</h1>
-                </div>
-                <div class="layout-cd-mp">
-                    <div>Cooldown: <span>10</span></div>
-                    <div>Mana Cost: <span>70</span></div>
-                </div>
-            </div>
-            <div class="layout-skill two">
-                <div class="layout-img-skill"> <img class="img-skill"
-                        src="assets/images/hero/tank/akai/skill/Thousand_Pounder.png" alt="" />
-                </div>
-                <div class="description-skill">
-                    <span>
-                        Akai jumps towards a designated location. Upon landing, Akai
-                        deals 300(+65%Total Physical Attack) points of Physical
-                        Damage to enemy units, while expercieincing a slow effect
-                        for 2 seconds. Akai deals bonus damage to marked enemies and
-                        causes a stun effect for 1 seconds.
-                    </span>
-                </div>
-            </div>
-        </div>
-        <!-- Skill 2 -->
-        <div>
-            <div class="layout-skill">
-                <div>
-                    <h1>Blender</h1>
-                </div>
-                <div class="layout-cd-mp">
-                    <div style="opacity: 0;">Cooldown: <span>6.5</span></div>
-                    <div>Cooldown: <span>6.5</span></div>
-                    <div>Mana Cost: <span>65</span></div>
-                </div>
-            </div>
-            <div class="layout-skill two">
-                <div class="layout-img-skill">
-                    <img class="img-skill" src="assets/images/hero/tank/akai/skill/Blender.png" alt="" />
-                </div>
-                <div class="description-skill">
-                    <span>
-                        Akai fires a frog shaped shockwave in the designated direction that explodes
-                        on
-                        contact with enemies or once it reaches maximum range, dealing
-                        350(+135%Extra
-                        Physical Attack) points of Physical Damage and marking them for 4 seconds.
-                        His
-                        basic attacks on marked targets deal extra 8% of Akai's maximum health as
-                        physical damage.
-                    </span>
-                </div>
-            </div>
-        </div>
-        <!-- Ultimate -->
-        <div class="box-ulti">
-            <div class="layout-skill">
-                <div>
-                    <h1 style="text-align: center;">Hurricane Dance</h1>
-                </div>
-                <div class="layout-cd-mp">
-                    <div style="text-align: center;">Cooldown: <span>35.5</span></div>
-                    <div>Mana Cost: <span>120</span></div>
-                </div>
-            </div>
-            <div class="layout-skill">
-                <div class="layout-img-skill">
-                    <img class="img-skill" src="assets/images/hero/tank/akai/skill/Hurricane_Dance.png" alt="" />
-                </div>
-                <div class="description-skill">
-                    <span>
-                        Akai removes all CC effects from him and spins like a tornado for 3.5
-                        seconds.
-                        Each collision knocks back the target and deals 180(+165%Extra Physical
-                        Attack)
-                        points of Physical Damage (damage decays against the same target). During
-                        the
-                        time, Akai becomes immune to all CC effects and gains movement speed by 30%.
-                    </span>
-                </div>
-            </div>
-        </div>
-        </div>
-        <!-- Skill code End -->
-        </div>
         </div>
         </article>
         <!-- <article id="wisata" class="card">
